# RPEngine

./: .gitignore  CMakeLists.txt  build_debug.bat  build_release.bat  conanfile.txt  format_all_files.bat  generate_project_files_release.bat
.github/workflows/: Test-Window-build.yml  clang-format-checker.yml  linux-build.yml  windows-build.yml  windows-test-runner.yml
Automation/: automation.py
Automation/CMAKE/: CMakeHelpers.cmake
Automation/ConanProfiles/: windowsDebug  windowsRelease
Engine/: CMakeLists.txt  EngineConfig.h.template
Engine/Assets/shaders/: PointCloud.frag  PointCloud.vert  Wireframe.frag
Engine/Source/: main.cpp  pch.h
Engine/Source/Core/: Engine.cpp  Engine.h  GameInstance.cpp  GameInstance.h  ObjectFactory.cpp  ObjectFactory.h  SystemObject.cpp  SystemObject.h  SystemObject.hpp  Utility.h
Engine/Source/Event/: Event.h  InputEvent.h
Engine/Source/GameFrameWork/: Controller.h  PlayerController.cpp  PlayerController.h
Engine/Source/GameFrameWork/Collision/: Capsule.cpp  Capsule.h  CollisionComponent.cpp  CollisionComponent.h  Cube.cpp  Cube.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Engine/Source/GameFrameWork/Controller/: Controller.h  PlayerController.cpp  PlayerController.h
Engine/Source/GameFrameWork/GameObjects/Components/: InputComponent.cpp  InputComponent.h  MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp  WorldActorComponent.h
Engine/Source/GameFrameWork/GameObjects/WorldObject/: Character.cpp  Character.h  WorldActor.h  WorldObject.cpp  WorldObject.h  WorldPawn.cpp
Engine/Source/GameFrameWork/World/: Level.cpp  Level.h  World.cpp  World.h
Engine/Source/GameFramework/Collision/: Capsule.cpp  CollisionComponent.h  Cube.cpp  Cube.h
Engine/Source/GameFramework/GameObjects/Components/: TransformComponent.cpp  TransformComponent.h  WorldActorComponent.cpp  WorldActorComponent.h
Engine/Source/GameFramework/GameObjects/WorldObject/: Character.cpp  Character.h  WorldActor.cpp  WorldActor.h  WorldPawn.cpp  WorldPawn.h
Engine/Source/GameFramework/World/: Level.cpp  Level.h  World.h
Engine/Source/Input/: InputManager.cpp  InputManager.h  KeyCodes.h
Engine/Source/Log/: Log.cpp  Log.h
Engine/Source/Math/: CE_MathConstants.h  CE_MathHelpers.h  MathConstants.cpp  MathGLMConverters.h  MathHelpers.cpp  MathTypes.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4.cpp  Vector4.h
Engine/Source/Physics/: PhysicsManager.cpp  PhysicsManager.h  PhysicsUtils.h
Engine/Source/Render/: FrameInfo.cpp  FrameInfo.h
Engine/Source/Render/RHI/: Material.cpp  Material.h  Mesh.h  Renderer.h  SkeletalMesh.h  StaticMesh.cpp  StaticMesh.h
Engine/Source/Render/vulkan/: vkContext.cpp  vkContext.h  vkRender.cpp  vkRender.h
Engine/Source/Render/vulkan/Managers/: BufferManager.cpp  BufferManager.h  CommandManager.cpp  CommandManager.h  DescriptorManager.cpp  DescriptorManager.h  DeviceManager.cpp  DeviceManager.h  FrameBufferManager.cpp  FrameBufferManager.h  IVkManager.h  InstanceManager.cpp  InstanceManager.h  PipelineManager.cpp  PipelineManager.h  RenderpassManager.cpp  RenderpassManager.h  ShadersManager.cpp  ShadersManager.h  SwapchainManager.cpp  SwapchainManager.h  SyncManager.cpp  SyncManager.h
Engine/Source/Window/: IWindow.h  IWindowManager.h
Engine/Source/Window/GLFW/: GLFWWindow.cpp  GLFWWindow.h  GLFWWindowManager.cpp  GLFWWindowManager.h
Engine/Source/Window/Linux/: LinuxWindow.cpp  LinuxWindow.h  LinuxWindowManager.cpp  LinuxWindowManager.h
Engine/Source/Window/MacOS/: MacOSWindow.cpp  MacOSWindow.h  MacOSWindowManager.cpp  MacOSWindowManager.h
Engine/Source/Window/WinAPI/: Win32Window.cpp  Win32Window.h  Win32WindowManager.cpp  Win32WindowManager.h
Engine/Tests/: CollisionsTests.cpp  EventChaining.cpp  EventSubscriptionLifetime.cpp  EventTests.cpp  GLMconverterTests.cpp  LogConceptTests.cpp  LogConceptsTest.cpp  MathTests.cpp  MathconstantsTests.cpp  MatrixTests.cpp  ObjectsTests.cpp  QuatTests.cpp  Vector2DTests.cpp  Vector3DTests.cpp  Vector4DTests.cpp  WindowTests.cpp
